--- a/app/src/main/res/layout/layout_prod_hdr_logo.xml
+++ b/app/src/main/res/layout/layout_prod_hdr_logo.xml
@@ -13,7 +13,7 @@
         android:layout_margin="8dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="2dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <!--// Changes For common app 05 -->
 
