--- a/app/src/main/res/layout/content_client_declare.xml
+++ b/app/src/main/res/layout/content_client_declare.xml
@@ -66,7 +66,7 @@
                     android:drawableLeft="@drawable/ic_edit"
                     android:drawablePadding="2dp"
                     android:focusableInTouchMode="true"
-                    android:hint="Reliance Policy No./Vehicle No."
+                    android:hint="Policy No./Vehicle No."
                     android:maxLength="30"
                     android:inputType="text"
                     android:textStyle="italic" />
