--- a/app/src/main/res/layout/update_dialog.xml
+++ b/app/src/main/res/layout/update_dialog.xml
@@ -38,21 +38,23 @@
 
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-
-            android:text="UPDATE !"
             android:layout_marginTop="5dp"
+
+            android:layout_marginRight="5dp"
             android:padding="4dp"
+            android:text="UPDATE !"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtMsg"
-            style="@style/TextViewStyle.MediumRegular"
+            style="@style/TextViewStyle.MediumLarge"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="10dp"
             android:layout_marginRight="8dp"
+            android:layout_marginBottom="10dp"
 
             android:text="A new Version is available on Play Store !!!Please Update."
             android:textStyle="italic"
@@ -68,21 +70,19 @@
             android:layout_height="1dp"
 
             android:layout_marginTop="8dp"
-            android:background="@color/search_gray"
-            />
+            android:background="@color/search_gray" />
 
         <TextView
             android:id="@+id/tvOk"
             style="@style/TextViewStyle.MediumDark"
             android:layout_width="wrap_content"
-           android:textColor="@color/blue_descent"
-           android:textStyle="bold"
-            android:padding="5dp"
+            android:padding="10dp"
             android:paddingLeft="30dp"
             android:paddingRight="30dp"
-
             android:text="OK"
-           />
+            android:textColor="@color/blue_descent"
+
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
