--- a/app/src/main/res/layout/layout_insurance_comp_item.xml
+++ b/app/src/main/res/layout/layout_insurance_comp_item.xml
@@ -15,16 +15,20 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <ImageView
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="2dp"
+        <!--<ImageView-->
+        <!--android:layout_width="16dp"-->
+        <!--android:layout_height="16dp"-->
+        <!--android:layout_marginLeft="4dp"-->
+        <!--android:layout_marginTop="2dp"-->
 
-            android:gravity="left|center_vertical"
+        <!--android:gravity="left|center_vertical"-->
 
-            android:src="@drawable/search" />
+        <!--android:src="@drawable/search" />-->
 
+        <CheckBox
+            android:id="@+id/chkComp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtTitle"
